fix(demo): fix alignment demo

--- a/website/src/app/shared/callout/callout.component.scss
+++ b/website/src/app/shared/callout/callout.component.scss
@@ -4,12 +4,6 @@ mat-card {
   padding-left: 5px;
 }
 
-.content {
-  display: table-cell;
-  vertical-align: middle;
-}
-
 mat-icon {
-  padding: 0 10px;
-  display: table-cell;
+  margin: 0 10px;
 }
